<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/standingsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:background="@color/black">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tableRankLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2px"
                android:background="@color/white"
                android:text="@string/rank"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tableNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2px"
                android:background="@color/white"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tablePointsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2px"
                android:background="@color/white"
                android:text="@string/points"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tableTiebreakerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2px"
                android:background="@color/white"
                android:text="@string/tiebreaker"
                android:textAlignment="center"
                android:textSize="16sp" />

        </TableRow>

    </TableLayout>

</ScrollView>
